--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@ class: center, middle
   <i class="socicon-twitter"></i> [@vlovgr](https://twitter.com/vlovgr)
 </span>
 
+---
+
+class: center, middle
+
+# Questions?
+
+## Thanks!
+
+<h3 style="margin-bottom: 0;">Slides and code available at:</h3>
+<h3 style="margin-top: 0;"><a href="https://github.com/vlovgr/actors-cats-effect-fs2">github.com/vlovgr/actors-cats-effect-fs2</a></h3>
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
     <script>
